loxman uodate on nilexia learning

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       <header>
         <h1>CAMPER CAFE</h1>
         <p class="established">Est. 2020</p>
+        <a href="/order.html"><button>Make Your Order Now!  </button></a>
         </header>
-      <main>    
+      <main>
         <section class="coffee-section">
             <div class="coffee-heading">
                 <h2>Coffee</h2>
@@ -21,7 +22,7 @@
             <div class="coffee-item">
             <article class="item">
                 <p class="flavor">French Vanilla</p>
-                <p class="price">3.00</p>
+                <p class="price">K3.00</p>
                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKckM8DN36NYMO9NK4rOlfqOEzzuA5vxAuIA&s">
                <p>French Vanilla coffee is a smooth, creamy blend with a hint of rich vanilla, providing a delightful, aromatic, and comforting experience.</p>
             </article>
