--- a/order.html
+++ b/order.html
@@ -9,7 +9,7 @@
     <div class="lox">
       <h1>Make Your Order now!</h1>
       <p class="loxman01">Fill out the form and will serve you! </p>
-      <a href="/index.html">Back to Menu</a>
+      <a href="/index.html"><button>Back to Menu</button></a>
     </div>
     <form method="get" action='/submit.html'>
       <fieldset>
