--- a/submit.html
+++ b/submit.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="submit.css" />
 </head>
 <body>
-        <a href="/order.html">Back to Menu:</a>
+        <a href="/order.html"><button>Back to Menu:</button></a>
         <h1>Thank You</h1>
         <h2>Your Order has been NOTIFIED!!</h2>
         <h3>Check your reciept at nilexialearning.com</h3>
